salesforce/generated/hubbell_ingest_api/objects/hubbell_Product__dll/hubbell_Product__dll.object-meta.xml
<CustomObject>
    <label>hubbell_Product</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>