salesforce/generated/hubbell_ingest_api/objects/hubbell_Product__dll/fields/InstallationRequired__c.field-meta.xml
<CustomField>
    <fullName>InstallationRequired__c</fullName>
    <label>InstallationRequired</label>
    <defaultValue>false</defaultValue>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>InstallationRequired</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>