salesforce/generated/hubbell_ingest_api/objects/hubbell_Product__dll/fields/KQ_ProductId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ProductId__c</fullName>
    <label>KQ_ProductId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_ProductId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>